dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-prometheus
  namespace: go-prometheus
  labels:
    app: go-prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-prometheus
  template:
    metadata:
      labels:
        app: go-prometheus
    spec:
      containers:
      - name: go-prometheus
        image: cyrip/go-prometheus:1.0.0
        ports:
        - containerPort: 8080
